Fix z-index order.

--- a/web/src/user/index.entrypoint.css
+++ b/web/src/user/index.entrypoint.css
@@ -1,9 +1,7 @@
-.pf-c-page__main,
-.pf-c-drawer__content,
-.pf-c-page__drawer {
-    z-index: auto !important;
-    background-color: transparent !important;
+.pf-c-drawer__panel {
+    z-index: var(--pf-global--ZIndex--md);
 }
+
 .pf-c-page__header {
     background-color: transparent !important;
     box-shadow: none !important;
